--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.21",
     "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.6",
@@ -19,6 +21,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "scrollreveal": "^4.0.9",
+    "swiper": "^11.1.9",
     "web-vitals": "^2.1.4",
     "yet-another-react-lightbox": "^3.21.1"
   },
